deploy/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xchar
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: xchar
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xchar
        tier: api
    spec:
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: xchar
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "80m"
            limits:
              memory: "1200Mi"
              cpu: "300m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: xchar-image
              mountPath: /app/.next/cache/images
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 20
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: xchar-image
          persistentVolumeClaim:
            claimName: xchar-image # OSS PVC created manually in the ACK console
