deploy/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xchar
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: xchar
    tier: api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
